--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "qlsgroup/magento2-module-noreservations",
     "description": "",
+    "version": "v1.0.0",
     "require": {
         "magento/module-inventory": "^1.0",
         "magento/module-inventory-shipping": "^1.0"
